[package]
name = "nasdaq_strategy_treasury"
version = "0.1.0"
description = "Treasury management program for nasdaq-strategy"
edition = "2021"

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
solana-program = "1.17"

[lib]
crate-type = ["cdylib", "lib"]
name = "nasdaq_strategy_treasury"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
